crates/reviewq-tui/src/snapshots/reviewq_tui__ui__tests__a_pr_with_no_stored_description_renders_no_description_section.snap
---
source: crates/reviewq-tui/src/ui.rs
expression: shown
---
reviewq  1 on the queue
╭ Queue ────────────────────────────────╮╭ #1 ───────────────────────────────────────────╮
│ ▸   #1  @kaxil mentioned you area:asy ││ No body yet                                   █
│                                       ││ OPEN · @potiuk · interest: label area:async   █
│                                       ││ opened 2026-07-30 · updated                   █
│                                       ││ 2026-08-10T09:00:00Z ·  main                 █
│                                       ││ area:async                                    █
│                                       ││                                               █
│                                       ││ You                                           █
│                                       ││   you have not looked at it yet               █
│                                       ││                                               █
│                                       ││ Attention                                     █
│                                       ││   p2  @kaxil mentioned you                    ║
│                                       ││                                               ║
╰───────────────────────────────────────╯╰───────────────────────────────────────────────╯
jk move   ⏎ review   d done   z snooze   ? / h keys   Esc quit
