crates/reviewq-tui/src/snapshots/reviewq_tui__ui__tests__an_empty_history_explains_its_backfill_state.snap
---
source: crates/reviewq-tui/src/ui.rs
expression: shown
---
reviewq  History · apache/airflow#70135 · Relevant
╭ History ───────────────────────────────────────────────╮╭ Detail ────────────────────────────────╮
│ No retained activity yet.                              ││ Current pull request                   │
│ Activity history is incomplete.                        ││ Title        Add deferrable mode to    │
│                                                        ││ S3KeySensor                            │
│                                                        ││ Pull request apache/airflow#70135      │
│                                                        ││ State        open                      │
│                                                        ││ Tracking     tracked                   │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
│                                                        ││                                        │
╰────────────────────────────────────────────────────────╯╰────────────────────────────────────────╯
  jk move   H switch scope   ⏎ show PR   o open link   Esc back   a Relevant / All
