crates/reviewq-tui/src/snapshots/reviewq_tui__ui__tests__an_empty_queue_says_so_rather_than_rendering_a_blank_pane.snap
---
source: crates/reviewq-tui/src/ui.rs
expression: "screen(&mut app, 80, 12)"
---
reviewq  0 on the queue
╭ Queue ───────────────────────────╮╭ Detail ──────────────────────────────────╮
│ Nothing on the queue.            ││ Select a PR to see its detail.           │
│                                  ││                                          │
│                                  ││                                          │
│                                  ││                                          │
│                                  ││                                          │
│                                  ││                                          │
│                                  ││                                          │
│                                  ││                                          │
╰──────────────────────────────────╯╰──────────────────────────────────────────╯
jk move   ⏎ review   d done   z snooze   ? / h keys   q / Esc quit
