crates/reviewq-tui/src/snapshots/reviewq_tui__ui__tests__the_detail_pane_says_nothing_about_a_branch_it_has_not_synced_yet.snap
---
source: crates/reviewq-tui/src/ui.rs
expression: shown
---
reviewq  1 on the queue
╭ Queue ────────────────────────────────────╮╭ #70135 ─────────────────────────────────────────────╮
│ ▸   #70135  @kaxil mentioned you area:asy ││ Stored before the branch was captured               │
│                                           ││ OPEN · @potiuk · interest: label x                  │
│                                           ││ opened 2026-07-30 · updated 2026-08-10T09:00:00Z    │
│                                           ││ area:async                                          │
│                                           ││                                                     │
│                                           ││ You                                                 │
│                                           ││   you have not looked at it yet                     │
│                                           ││                                                     │
│                                           ││ Attention                                           │
│                                           ││   p2  @kaxil mentioned you                          │
│                                           ││                                                     │
│                                           ││ Activity                                            │
│                                           ││   activity history incomplete                       │
│                                           ││   H  complete history                               │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
╰───────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯
jk move   ⏎ review   d done   z snooze   ? / h keys   Esc quit
