crates/reviewq-tui/src/snapshots/reviewq_tui__ui__tests__the_help_overlay_lists_every_binding_grouped.snap
---
source: crates/reviewq-tui/src/ui.rs
expression: screen
---
reviewq  2 on the queue
╭ Queue ────────────────────────────────────╮╭ #70135 ─────────────────────────────────────────────╮
│ ▸   #70135  @kaxi╭ Reference ────────────────────────────────────────────────╮r                  │
│     #70201  match│ Marks                                                     │area:async         │
│                  │   ✓           you reviewed it on the forge                │08-10T09:00:00Z ·  │
│                  │   ✓           …and the PR has moved on since              │                   │
│                  │   ·           you marked it done here                     │                   │
│                  │   ·           …and the PR has moved on since              │                   │
│                  │   󰒲           you deferred it to the bottom               │                   │
│                  │                                                           │                   │
│                  │ Navigate                                                  │                   │
│                  │   ↑↓ / jk     move                                        │                   │
│                  │   PgDn        page down                                   │                   │
│                  │   PgUp        page up                                     │                   │
│                  │   ^D          page the description down                   │                   │
│                  │   ^U          page the description up                     │                   │
│                  │   g / Home    first                                       │                   │
│                  │   G / End     last                                        │nsor.              │
│                  │   :           go to a PR by number                        │                   │
│                  │                                                           │                   │
│                  │ View                                                      │                   │
│                  │   Tab         switch pane                                 │                   │
│                  │   t           adapt for a light or dark terminal          │                   │
│                  │   ^L          show or hide the labels                     │rue)               │
│                  │   W           show what waits on someone else, or go back │                   │
│                  │   M           show what you have muted, or go back        │                   │
│                  │   H           show activity history                       │                   │
│                  │                                                           │                   │
│                  │ Act on the PR                                             │                   │
│                  │   ⏎           review it — hand off to your review command │                   │
│                  │   d           done — handled at this head                 │                   │
│                  │   z           snooze for a while                          │                   │
│                  │   o           open it in your browser                     │                   │
│                  │   c / y       copy its URL                                │                   │
│                  │   m           mute, or unmute                             │                   │
│                  │   f           defer to the bottom, or restore             │                   │
│                  │   u           untrack — stop watching it                  │                   │
│                  │                                                           │                   │
│                  │ Forge                                                     │                   │
│                  │   r           refresh from the forge                      │                   │
│                  │   S           sync every repo, in the background          │                   │
│                  │                                                           │                   │
│                  │ Session                                                   │                   │
│                  │   ? / h       keys                                        │                   │
│                  │   Esc         quit                                        │                   │
│                  │   q           quit, from wherever you are                 │                   │
│                  │                                                           │                   │
│                  │ Mouse                                                     │                   │
│                  │   click       select the row, or focus the pane           │                   │
│                  │   wheel       scroll what is under the pointer            │                   │
│                  ╰ ↑↓ scroll   any other key close ──────────────────────────╯                   │
╰───────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯
jk move   ⏎ review   d done   z snooze   ? / h keys   Esc quit
