crates/reviewq-tui/src/snapshots/reviewq_tui__ui__tests__the_history_view_shows_one_prs_activity.snap
---
source: crates/reviewq-tui/src/ui.rs
expression: shown
---
reviewq  History · apache/airflow#70135 · Relevant
╭ History ───────────────────────────────────────────────────────────╮╭ Detail ────────────────────────────────────────╮
│ ▸ 2026-08-12T08:00:00Z    #70135  merged (open → merged)          ││ Event metadata                                 │
│   2026-08-12T07:00:00Z  ✎  #70135  you commented                   ││ Action       merged (open → merged)            │
│   2026-08-12T06:00:00Z  ◆  #70135  you requested changes at abcdef ││ Occurred     2026-08-12T08:00:00Z              │
│   2026-08-12T05:00:00Z  ▶  #70135  you started a review            ││ Source       forge                             │
│   2026-08-12T04:00:00Z  ✓  #70135  you marked done                 ││ Actor        ashb                              │
│   2026-08-12T03:00:00Z  ✎  #70135  you commented in review thread  ││ Link         pull request                      │
│   2026-08-12T02:00:00Z  ×  #70135  closed (open → closed)          ││                                                │
│                                                                    ││ Current pull request                           │
│                                                                    ││ Title        Deferrable mode for S3KeySensor   │
│                                                                    ││ Pull request apache/airflow#70135              │
│                                                                    ││ State        open                              │
│                                                                    ││ Tracking     tracked                           │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
│                                                                    ││                                                │
╰────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────╯
  jk move   H switch scope   ⏎ show PR   o open link   Esc back   a Relevant / All
